<resources>
    <string name="app_name">TravelEase</string>
    <string name="register">Register</string>
    <string name="nama_tag">Nama</string>
    <string name="email_tag">Email</string>
    <string name="password_tag">Password</string>
    <string name="telepon_tag">Telepon</string>
    <string name="login">Login</string>
    <string name="google">Masuk dengan Google</string>
    <string name="daftar">Daftar</string>
    <string name="setuju">Saya menyetujui syarat dan ketentuan yang berlaku</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Ingat saya</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun? Login</string>
    <string name="register_text">Belum punya akun? Daftar</string>
    <string name="confirm_password_tag">Ulangi Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">647526141837-b71bt4jksifvtntqrdssgt3te0motg2f.apps.googleusercontent.com</string>
</resources>